[package]
name = "camtypers"
version = "0.1.0"
authors = ["Junichi Kajiwara <junichi.kajiwara@gmail.com>"]

[dependencies]
webcamrs = {git =  "https://github.com/kjunichi/webcamrs/"}
#webcamrs = {path =  "C:/Users/kjw_j/Documents/work/rust/webcamrs/"}
imgtypers = {git = "https://github.com/kjunichi/imgtypers/"}
#imgtypers = {path = "C:/Users/kjw_j/Documents/work/rust/imgtypers/"}
